Fixed alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,13 @@ h2{
 	text-align: center;
 }
 .addArea {
-	border-left:5px solid black;
-	height:800px;
+	
+	height:1500px;
 
 }
 .lookBetter {
 	text-align: center;
+}
+.grabMe {
+	overflow: none;
 }
